--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "echarts": "^5.4.3",
     "element-plus": "^2.4.3",
     "three": "^0.159.0",
-    "vue": "^3.3.8"
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/node": "^20.10.4",
     "@vitejs/plugin-vue": "^4.5.0",
     "sass": "^1.69.5",
+    "unplugin-auto-import": "^0.17.2",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.0"
   }
 }
