--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "d3": "^7.8.5",
     "echarts": "^5.4.3",
     "element-plus": "^2.4.3",
+    "marked": "^11.1.0",
     "three": "^0.159.0",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
