--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-plus": "^2.4.3",
     "marked": "^11.1.0",
     "three": "^0.159.0",
+    "tweenjs": "^1.0.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
